--- a/index.html
+++ b/index.html
@@ -350,8 +350,7 @@
 				thirdLine = product.origin;
 				imageBaseURL = URLBuilder.carpetsThumbnailURL();
 			}
-			var painting = data[i];
-			var imageURL = `${imageBaseURL}/${painting.thumbnail}`;
+			var imageURL = `${imageBaseURL}/${product.thumbnail}`;
 			imageURL = imageURL.split(" ").join("%20");
 			collection.append(`
 			<div class="col-lg-4 col-md-6 portfolio-item filter-app">
