--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
 			}
 			var imageURL = `${imageBaseURL}/${product.thumbnail}`;
 			imageURL = imageURL.split(" ").join("%20");
+			var collection = $("#portfolio-wrapper");
 			collection.append(`
 			<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 				<div style="text-align: center;">
