--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
 	<script src="js/main.js"></script>
 	<script>
 
+		$("#portfolio-wrapper").on('click', "img", function () {
+			window.location = `${$(this).attr("data-url")}`;
+
+		});
 		var slideIndex = 1;
 		showDivs(slideIndex);
 
@@ -356,7 +360,7 @@
 			collection.append(`
 			<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 				<div style="text-align: center;">
-					<img src="${imageURL}" alt="">
+					<img src="${imageURL}" alt="" data-url="product.html?id=${product.item_number}">
 					<h4>${firstLine}</h4>
 					<span>${secondLine}</span><br>
 					<span style="color:lightgray">${thirdLine}</span>
