--- a/product.html
+++ b/product.html
@@ -373,6 +373,10 @@
 			let name = $("#myModal-name").val();
 			let emailid = $("#myModal-email").val();
 
+			if (emailid.search(/.*@.+\.+*/) >= 0) {
+				validated = true;
+			}
+
 			//send data
 			if (validated) {
 				$.ajax("api/enquiry.php", {
