fix: nothing to repeat

--- a/product.html
+++ b/product.html
@@ -372,7 +372,7 @@
 			let name = $("#myModal-name").val();
 			let emailid = $("#myModal-email").val();
 
-			if (emailid.search(/.*@.+\.+*/) >= 0) {
+			if (emailid.search(/.*@.+\..+/) >= 0) {
 				validated = true;
 			}
 
