implement: artist details page

--- a/artistdetail.html
+++ b/artistdetail.html
@@ -52,9 +52,9 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div style="text-align: left;margin-top:-25px;">
 							<h2 id="artistName"><b>Syed Haider Raza</b></h2>
-							<span><b>22 February 1922-25th July 2019</b></span><br />
+							<span><b id="artistSub">22 February 1922-25th July 2019</b></span><br />
 							<br /><br />
-							<p>
+							<p id="artistDescription">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuistiquem maecenas
 								ultricies mi eget mauris. Mauris ultrices eros in cursus turpis massa. Id donec ultrices
 								tincidunt arcu non sodales neque. Nam at lectus urna duis. Mi proin sed libero enim.
