--- a/artistdetail.html
+++ b/artistdetail.html
@@ -47,7 +47,7 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-						<img id="artistPic" src="img/placeholder.jpg" alt="">
+						<img id="artistPic" style="max-width: 100%; height: unset; width: unset;" src="img/placeholder.jpg" alt="">
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div style="text-align: left;margin-top:-25px;">
