--- a/events.html
+++ b/events.html
@@ -140,7 +140,7 @@
 						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.event_id}">
 							<img src="${URLBuilder.eventsThumbnailURL()}/${element.thumbnail}" style="width:unset; height:unset; max-width:100%;" alt="">
 							<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
-								<h4 style="color:white;text-decoration-line:underline">${event.name}</h4>
+								<h4 style="color:white;text-decoration-line:underline">${element.name}</h4>
 							</div>
 						</div>
 					`);
