remove placeholder gallery items

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -189,7 +189,7 @@
 								class="pull-left" onclick="ActiveDiv1()">
 							<img src="img/next.png" style="position: relative; z-index: 2;top: 35px;right: 6px;"
 								class="pull-right" onclick="ActiveDiv2()">
-							<div class="carousel-item active" id="div1">
+							<!-- <div class="carousel-item active" id="div1">
 								<div class="row">
 
 									<div class="col-md"><img class="d-block w-100" id="myImg"
@@ -224,7 +224,7 @@
 											src="img/IMG_0695-400x300.png" alt="12 slide"></div>
 
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
