--- a/eventdetail.html
+++ b/eventdetail.html
@@ -319,58 +319,58 @@
 		var modal = document.getElementById("myModal");
 
 
-		var img = document.getElementById("myImg");
-		var modalImg = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
+		// var img = document.getElementById("myImg");
+		// var modalImg = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
 
-		var img1 = document.getElementById("myImg1");
-		var modalImg1 = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img1.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
-		var img2 = document.getElementById("myImg2");
-		var modalImg2 = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img2.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
+		// var img1 = document.getElementById("myImg1");
+		// var modalImg1 = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img1.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
+		// var img2 = document.getElementById("myImg2");
+		// var modalImg2 = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img2.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
 
-		var img3 = document.getElementById("myImg3");
-		var modalImg3 = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img3.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
+		// var img3 = document.getElementById("myImg3");
+		// var modalImg3 = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img3.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
 
-		var img4 = document.getElementById("myImg4");
-		var modalImg4 = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img4.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
+		// var img4 = document.getElementById("myImg4");
+		// var modalImg4 = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img4.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
 
-		var img5 = document.getElementById("myImg5");
-		var modalImg5 = document.getElementById("img01");
-		var captionText = document.getElementById("caption");
-		img5.onclick = function () {
-			modal.style.display = "block";
-			modalImg.src = this.src;
-			captionText.innerHTML = this.alt;
-		}
+		// var img5 = document.getElementById("myImg5");
+		// var modalImg5 = document.getElementById("img01");
+		// var captionText = document.getElementById("caption");
+		// img5.onclick = function () {
+		// 	modal.style.display = "block";
+		// 	modalImg.src = this.src;
+		// 	captionText.innerHTML = this.alt;
+		// }
 
 
 	</script>
