--- a/eventdetail.html
+++ b/eventdetail.html
@@ -309,7 +309,7 @@
 					}
 					$(collection).find(".row").append(`
 						<div class="col-md">
-							<img class="d-block" style="max-width: 20%"
+							<img class="d-block w-100" style="max-width: 200px"
 									src="${URLBuilder.eventsGalleryThumbnailURL()}/${data[x].thumbnail}" alt="">
 						</div>
 					`);
