--- a/eventdetail.html
+++ b/eventdetail.html
@@ -183,13 +183,21 @@
 					<p class="section-description"></p>
 				</div>
 				<div class="container">
-					<div class="carousel slide" data-ride="carousel">
+					<div class="carousel slide" data-ride="carousel" id="myCarousel">
 
 						<div class="carousel-inner" id="event-gallery">
-							<img src="img/next-1.png" style="position: relative; z-index: 2;top: 35px;right: 6px;"
+							<button class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left"></span>
+								<span class="sr-only">Previous</span>
+							</button>
+							<button class="right carousel-control" data-target="#myCarousel" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right"></span>
+								<span class="sr-only">Next</span>
+							</button>
+							<!-- <img src="img/next-1.png" style="position: relative; z-index: 2;top: 35px;right: 6px;"
 								class="pull-left" onclick="ActiveDiv1()">
 							<img src="img/next.png" style="position: relative; z-index: 2;top: 35px;right: 6px;"
-								class="pull-right" onclick="ActiveDiv2()">
+								class="pull-right" onclick="ActiveDiv2()"> -->
 							<!-- <div class="carousel-item active" id="div1">
 								<div class="row">
 
