--- a/eventdetail.html
+++ b/eventdetail.html
@@ -183,14 +183,14 @@
 					<p class="section-description"></p>
 				</div>
 				<div class="container">
-					<div class="carousel slide" data-ride="carousel" id="myCarousel">
+					<div class="carousel slide" data-ride="carousel" id="myCarousel1">
 
 						<div class="carousel-inner" id="event-gallery">
-							<button class="left carousel-control" data-target="#myCarousel" data-slide="prev">
+							<button class="left carousel-control" data-target="#myCarousel1" data-slide="prev">
 								<span class="glyphicon glyphicon-chevron-left"></span>
 								<span class="sr-only">Previous</span>
 							</button>
-							<button class="right carousel-control" data-target="#myCarousel" data-slide="next">
+							<button class="right carousel-control" data-target="#myCarousel1" data-slide="next">
 								<span class="glyphicon glyphicon-chevron-right"></span>
 								<span class="sr-only">Next</span>
 							</button>
