--- a/eventdetail.html
+++ b/eventdetail.html
@@ -328,14 +328,18 @@
 					collection = undefined;
 				}
 			});
+
+			$("#event-gallery").on("click", "img", () => {
+				modal.style.display = "block";
+				modalImg.src = $(this).attr("src");
+				captionText.innerHTML = $(this).attr("alt");
+			});
 		}
 
 		var modal = document.getElementById("myModal");
-
-
-		// var img = document.getElementById("myImg");
-		// var modalImg = document.getElementById("img01");
-		// var captionText = document.getElementById("caption");
+		var modalImg = document.getElementById("img01");
+		var captionText = document.getElementById("caption");
+		
 		// img.onclick = function () {
 		// 	modal.style.display = "block";
 		// 	modalImg.src = this.src;
