implement inmedia api

--- a/inmedia.html
+++ b/inmedia.html
@@ -160,6 +160,10 @@
 			x[slideIndex - 1].style.visibility = "visible";
 			dots[slideIndex - 1].className += " w3-white";
 		}
+
+		function updateInMedia() {
+			$.get("");
+		}
 	</script>
 </body>
 
