--- a/inmedia.html
+++ b/inmedia.html
@@ -52,15 +52,17 @@
 				<div class="container">
 					<div class="carousel slide" data-ride="carousel" id="inmedia-content">
 						<div class="carousel-inner">
-							<img src="img/next-1.png" style="position: relative;top:110px; z-index: 2;width:3%"
-								class="pull-left" onclick="ActiveDiv1()">
-							<img src="img/next.png" style="position: relative;top:110px; z-index: 2;width:3%"
-								class="pull-right" onclick="ActiveDiv2()">
+								<button class="left carousel-control" data-target="#inmedia-content" data-slide="prev" style="z-index: 1">
+										<span class="glyphicon glyphicon-chevron-left"></span>
+										<span class="sr-only">Previous</span>
+									</button>
+									<button class="right carousel-control" data-target="#inmedia-content" data-slide="next" style="z-index: 1">
+										<span class="glyphicon glyphicon-chevron-right"></span>
+										<span class="sr-only">Next</span>
+									</button>
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 		</section>
 
