--- a/inmedia.html
+++ b/inmedia.html
@@ -52,14 +52,16 @@
 				<div class="container">
 					<div class="carousel slide" data-ride="carousel" id="inmedia-content">
 						<div class="carousel-inner">
-								<button class="left carousel-control" data-target="#inmedia-content" data-slide="prev" style="z-index: 1">
-										<span class="glyphicon glyphicon-chevron-left"></span>
-										<span class="sr-only">Previous</span>
-									</button>
-									<button class="right carousel-control" data-target="#inmedia-content" data-slide="next" style="z-index: 1">
-										<span class="glyphicon glyphicon-chevron-right"></span>
-										<span class="sr-only">Next</span>
-									</button>
+							<button class="left carousel-control" data-target="#inmedia-content" data-slide="prev"
+								style="z-index: 1">
+								<span class="glyphicon glyphicon-chevron-left"></span>
+								<span class="sr-only">Previous</span>
+							</button>
+							<button class="right carousel-control" data-target="#inmedia-contents" data-slide="next"
+								style="z-index: 1">
+								<span class="glyphicon glyphicon-chevron-right"></span>
+								<span class="sr-only">Next</span>
+							</button>
 						</div>
 					</div>
 				</div>
@@ -140,9 +142,9 @@
 							content = document.createElement("div");
 							$(content).addClass("carousel-item");
 							$(content).append(`<div class="row"></div>`);
-							if (x==0) 
+							if (x == 0)
 								$(content).addClass("active");
-						} 
+						}
 						$(content).find(".row").append(`
 						<div class="col-lg-4 col-md">
 							<img class="d-block w-100"
