fix css selector

--- a/inmedia.html
+++ b/inmedia.html
@@ -135,7 +135,7 @@
 				for (let x = 0; x < data.length; x++) {
 					if (x % 6 == 0) {
 						if (content != undefined) {
-							$("#inmedia-content caarousel-inner").append(content);
+							$("#inmedia-content .carousel-inner").append(content);
 							content = undefined;
 						}
 					}
@@ -157,7 +157,7 @@
 
 				}
 				if (content != undefined) {
-					$("#inmedia-content carousel-inner").append(content);
+					$("#inmedia-content .carousel-inner").append(content);
 					content = undefined;
 				}
 			});
