add ts messages

--- a/Gallery.html
+++ b/Gallery.html
@@ -241,6 +241,8 @@
 						console.log(target_page);
 						console.log(num);
 						console.log(offset);
+						console.log (ev.target);
+						console.log($(ev.target));
 						fillProducts(data, type, offset, offset + num);
 					});
 
