fix next page does not disable

--- a/Gallery.html
+++ b/Gallery.html
@@ -227,7 +227,7 @@
 						if (target_page == 0)
 							$("#pagination-prev").addClass("disabled");
 
-						if (target_page == total_pages)
+						if (target_page == total_pages - 1)
 							$("#pagination-next").addClass("disabled");
 
 						$("#pagination-prev").data("target-page", target_page - 1);
