--- a/exhibitiondetail.html
+++ b/exhibitiondetail.html
@@ -249,7 +249,7 @@
 				$("#event-venue").html(event.venue);
 				$("#event-time").html(event.time);
 				$("#event-content").html(event.content);
-				$("#event-pic").attr("src", URLBuilder.eventsURL() + `/${event.thumbnail}`);
+				$("#event-pic").attr("src", URLBuilder.exhibitionsURL() + `/${event.flyer}`);
 			});
 
 			//gallery
