--- a/events.html
+++ b/events.html
@@ -47,38 +47,6 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<!-- <div class="col-lg-6 col-md-6 portfolio-item filter-app">
-						<img src="img/MG_9552.png" alt="">
-						<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
-							<h4 style="color:white;text-decoration-line:underline">M F Hussain</h4>
-						</div>
-					</div>
-
-
-					<div class="col-lg-6 col-md-6 portfolio-item filter-web">
-
-						<img src="img/IMG_0719.png" alt="">
-						<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
-							<h4 style="color:white;text-decoration-line:underline">M F Hussain</h4>
-
-
-
-						</div>
-
-					</div>
-
-					<div class="col-lg-12 col-md-6 portfolio-item filter-app">
-
-						<img src="img/5c1d8bb2-3917-442f-b98e-11f187f74feb.png" alt="">
-						<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
-							<h4 style="color:white;text-decoration-line:underline">M F Hussain</h4>
-
-
-
-						</div>
-					</div>
- -->
-
 				</div>
 
 			</div>
@@ -131,18 +99,35 @@
 		}
 
 		function populateEvents() {
-			$.get("/api/events.php", (data)=>{
-				data.forEach((element)=>{
+			let type = new URL(document.location).searchParams.get("type");
+			let baseurl = URLBuilder.api();
+			let thumbnailURL = "";
+
+			switch (type) {
+				case "events":
+					baseurl += "/events.php";
+					thumbnailURL = URLBuilder.eventsThumbnailURL();
+					break;
+				case "upcoming_events":
+					break;
+				case "exhibitions":
+					baseurl += "/exhibitions.php";
+					thumbnailURL = URLBuilder.exhibitionsThumbnailURL();
+					break;
+			}
+
+			$.get(baseurl, (data) => {
+				data.forEach((element) => {
 					$("#portfolio-wrapper").append(`
-						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.event_id}">
-							<img src="${URLBuilder.eventsThumbnailURL()}/${element.thumbnail}" style="width:unset; height:unset; max-width:100%;" alt="">
+						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.id}">
+							<img src="${thumbnailURL}/${element.thumbnail}" style="width:unset; height:unset; max-width:100%;" alt="">
 							<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
 								<h4 style="color:white;text-decoration-line:underline">${element.name}</h4>
 							</div>
 						</div>
 					`);
 				});
-			}); 
+			});
 		}
 	</script>
 </body>
