--- a/eventdetail.html
+++ b/eventdetail.html
@@ -186,11 +186,13 @@
 					<div class="carousel slide" data-ride="carousel" id="myCarousel1">
 
 						<div class="carousel-inner" id="event-gallery">
-							<button class="left carousel-control" data-target="#myCarousel1" data-slide="prev" style="z-index: 1">
+							<button class="left carousel-control" data-target="#myCarousel1" data-slide="prev"
+								style="z-index: 1">
 								<span class="glyphicon glyphicon-chevron-left"></span>
 								<span class="sr-only">Previous</span>
 							</button>
-							<button class="right carousel-control" data-target="#myCarousel1" data-slide="next" style="z-index: 1">
+							<button class="right carousel-control" data-target="#myCarousel1" data-slide="next"
+								style="z-index: 1">
 								<span class="glyphicon glyphicon-chevron-right"></span>
 								<span class="sr-only">Next</span>
 							</button>
@@ -244,20 +246,40 @@
 		}
 
 		function updateEventDetails() {
-			let event_id = new URL(document.location).searchParams.get("id");
+			let url = new URL(document.location).searchParams;
+			let event_id = url.get("id");
+			let type = url.get("type");
+
+			let baseURL, picURL, galleryURL, galleryThumbnailURL;
+
+			switch (type) {
+				case "events":
+					baseURL = "/api/events.php";
+					picURL = URLBuilder.eventsURL();
+					galleryURL = "/api/event_gallery.php";
+					galleryThumbnailURL = URLBuilder.eventsGalleryThumbnailURL();
+					break;
+				case "exhibitions":
+					baseURL = "/api/exhibitions.php";
+					picURL = URLBuilder.exhibitionsURL();
+					galleryURL = "/api/exhibition_gallery.php";
+					galleryThumbnailURL = URLBuilder.exhibitionGalleryThumbnailURL();
+					break;
+			}
+
 
 			//details
-			$.get("/api/events.php?event_id=" + event_id, (data) => {
+			$.get(`${baseURL}?id=` + event_id, (data) => {
 				let event = data[0];
 				$("#event-name").html(event.name);
 				$("#event-venue").html(event.venue);
 				$("#event-time").html(event.time);
 				$("#event-content").html(event.content);
-				$("#event-pic").attr("src", URLBuilder.eventsURL() + `/${event.thumbnail}`);
+				$("#event-pic").attr("src", + `/${event.thumbnail}`);
 			});
 
 			//gallery
-			$.get("/api/event_gallery.php?event_id=" + event_id, (data) => {
+			$.get(`${galleryURL}?id=` + event_id, (data) => {
 				let collection;
 				for (let x = 0; x < data.length; x++) {
 					if (x % 5 == 0) {
@@ -278,7 +300,7 @@
 					$(collection).find(".row").append(`
 						<div class="col-md">
 							<img class="d-block w-100" style="max-width: 200px; margin-left: auto; margin-right: auto;"
-									src="${URLBuilder.eventsGalleryThumbnailURL()}/${data[x].thumbnail}" alt="">
+									src="${galleryThumbnailURL}/${data[x].thumbnail}" alt="">
 						</div>
 					`);
 				}
@@ -299,8 +321,8 @@
 		var modal = document.getElementById("myModal");
 		var modalImg = document.getElementById("img01");
 		var captionText = document.getElementById("caption");
-		
-		
+
+
 	</script>
 
 </body>
