fix api() is not a function

--- a/events.html
+++ b/events.html
@@ -100,7 +100,7 @@
 
 		function populateEvents() {
 			let type = new URL(document.location).searchParams.get("type");
-			let baseurl = URLBuilder.api();
+			let baseurl = "api";
 			let thumbnailURL = "";
 
 			switch (type) {
