--- a/events.html
+++ b/events.html
@@ -119,9 +119,9 @@
 			$.get(baseurl, (data) => {
 				data.forEach((element) => {
 					$("#portfolio-wrapper").append(`
-						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.id}">
+						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.id}" style="height: 200px">
 							<img src="${thumbnailURL}/${element.thumbnail}" style="width:unset; height:unset; max-width:100%;" alt="">
-							<div style="position: relative;z-index: 2;margin-top: -260px;text-align: right;">
+							<div style="position: relative;z-index: 2;margin-top: -200px;text-align: right;">
 								<h4 style="color:white;text-decoration-line:underline">${element.name}</h4>
 							</div>
 						</div>
