fix flyer source

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -275,7 +275,7 @@
 				$("#event-venue").html(event.venue);
 				$("#event-time").html(event.time);
 				$("#event-content").html(event.content);
-				$("#event-pic").attr("src", + `/${event.thumbnail}`);
+				$("#event-pic").attr("src",picURL + `/${event.flyer}`);
 			});
 
 			//gallery
