--- a/eventdetail.html
+++ b/eventdetail.html
@@ -298,7 +298,7 @@
 						`);
 					}
 					$(collection).find(".row").append(`
-						<div class="col-md">
+						<div class="col-sm">
 							<img class="d-block w-100" style="max-width: 200px; margin-left: auto; margin-right: auto; height: 100%;"
 									src="${galleryThumbnailURL}/${data[x].thumbnail}" alt="">
 						</div>
