update contact info

--- a/contact.html
+++ b/contact.html
@@ -47,27 +47,23 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452"
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3509.573223249015!2d77.05780871507741!3d28.401955482509322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d228c92bd9dc5%3A0x3f7d62a1f2b90a00!2sM3M+Cosmopolitan!5e0!3m2!1sen!2sin!4v1565538976117!5m2!1sen!2sin" 
 							width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-
 					</div>
 
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-
 						<div style="text-align: center;margin-top:80px;">
 							<h2 style="text-decoration-line:underline"><b>Contact Us</b></h2>
 							<span><b>Email</b></span><br />
 							<span>info@mashaart.in</span><br />
 							<br />
 							<span><b>Phone</b></span><br />
-							<span>+91 34 45433434</span><br />
-							<span>+91 34 45433434</span><br />
+							<span>+91 8948799799</span><br />
+							<span>+91 9999636199</span><br />
 							<br />
 							<span><b>Address</b></span><br />
-							<span>1122,DLF Magnolias Haryana 122099</span>
+							<span>#212/214, M3M Cosmopolitan<br />Sector 66; Gurugram, Haryana 122102</span>
 							<br />
 
 						</div>
