--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
 		rel="stylesheet">
 
-
 	<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
@@ -26,6 +25,7 @@
 
 	<link href="css/gallery.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<link href="css/footer.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
