--- a/eventdetail.html
+++ b/eventdetail.html
@@ -31,7 +31,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<style>
 		body {
-			font-family: Arial, Helvetica, sans-serif;
+			font-family: Roboto, Arial, Helvetica, sans-serif;
 		}
 
 		#myImg {
