apply font everywhere

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body>
+<body style="font-family: Roboto">
 
 	<script src="js/navbar_bg_black.js"></script>
 
@@ -68,15 +68,6 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div style="text-align: center;">
-							<img src="img/METAMORPHOSIS-600x600.png" alt="">
-							<h4>Painter Name</h4>
-							<span>Artist </span><br />
-							<span style="color:lightgray">Medium</span>
-
-						</div>
-					</div> -->
 				</div>
 
 			</div>
@@ -104,7 +95,6 @@
 						</div>
 
 						<div class="item">
-							<!--div class="backgroundImg2Call2Action"></div-->
 							<div class="col-lg-12 text-center text-lg-left">
 								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -113,7 +103,6 @@
 						</div>
 
 						<div class="item">
-							<!--div class="backgroundImg3Call2Action"></div-->
 							<div class="col-lg-12 text-center text-lg-left">
 								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
