remove placeholder in product page

--- a/product.html
+++ b/product.html
@@ -71,7 +71,7 @@
 
 			</div>
 		</section>
-		<section id="facts">
+		<!-- <section id="facts">
 			<div class="container wow fadeIn">
 
 				<div class="row">
@@ -121,7 +121,7 @@
 				</div>
 
 			</div>
-		</section>
+		</section> -->
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
