--- a/product.html
+++ b/product.html
@@ -49,7 +49,7 @@
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
 
-						<img id="product-thumbnail" style="width: 100%; height: unset; width: unset;" src="img/placeholder.jpg" alt="">
+						<img id="product-thumbnail" style="width: 95%; max-height: unset; max-width: unset;" src="img/placeholder.jpg" alt="">
 					</div>
 
 
