increased image size in detailed pages

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -159,7 +159,7 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-						<img id="event-pic" style="width: unset; height: unset; max-width: 100%;"
+						<img id="event-pic" style="max-width: unset; max-height: unset; width: 95%;"
 							src="img/placeholder.jpg" alt="">
 					</div>
 
