fixed image heights in detailed pages

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -158,7 +158,7 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
+					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset;">
 						<img id="event-pic" style="max-width: unset; max-height: unset; width: 95%;"
 							src="img/placeholder.jpg" alt="">
 					</div>
