--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
+					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset;">
 
 						<img id="product-thumbnail" style="width: 95%; max-height: unset; max-width: unset;" src="img/placeholder.jpg" alt="">
 					</div>
