--- a/artistdetail.html
+++ b/artistdetail.html
@@ -47,7 +47,7 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
+					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset;">
 						<img id="artistPic" style="width: 95%; max-width: unset; max-height: unset;" src="img/placeholder.jpg" alt="">
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
