--- a/eventdetail.html
+++ b/eventdetail.html
@@ -200,6 +200,19 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- Custom slider -->
+				<div class="gallery-slider">
+					<div class="gallery-slider-inner">
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+					</div>
+				</div>
 			</div>
 		</section><!-- #services -->
 
