--- a/eventdetail.html
+++ b/eventdetail.html
@@ -204,13 +204,14 @@
 				<!-- Custom slider -->
 				<div class="gallery-slider">
 					<div class="gallery-slider-inner">
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
-						<div style="width: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
+						<div style="width: 100px; height: 100px; margin-right: 10px; background-color: red" ></div>
 					</div>
 				</div>
 			</div>
